--- a/ctmobile-ui/index.css
+++ b/ctmobile-ui/index.css
@@ -5,6 +5,16 @@ html, body {
   height: 100%;
 }
 
+*::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  background-color: #dcdcdc;
+}
+
 .ctmobile-ui-container {
   width: 100%;
   height: 100%;
@@ -89,7 +99,7 @@ html, body {
 }
 
 .ctmobile-ui-container .ctmobile-ui-footer {
-  padding: 50px ;
+  padding: 50px;
   border-top: 1px solid #ccc;
   display: flex;
 }
