--- a/ctmobile-ui/html/ImageViewer/index.css
+++ b/ctmobile-ui/html/ImageViewer/index.css
@@ -317,7 +317,7 @@
 
 */
 /*
-	
+
 	1. Buttons
 
  */
@@ -356,7 +356,7 @@
 .pswp__button,
 .pswp__button--arrow--left:before,
 .pswp__button--arrow--right:before {
-  background: url(/playerljc.github.io/ctmobile-ui/html/ImageViewer/e3f799c6dec9af194c86decdf7392405.png) 0 0 no-repeat;
+  background: url(/ctmobile-ui/html/ImageViewer/e3f799c6dec9af194c86decdf7392405.png) 0 0 no-repeat;
   background-size: 264px 88px;
   width: 44px;
   height: 44px; }
@@ -366,7 +366,7 @@
   .pswp--svg .pswp__button,
   .pswp--svg .pswp__button--arrow--left:before,
   .pswp--svg .pswp__button--arrow--right:before {
-    background-image: url(/playerljc.github.io/ctmobile-ui/html/ImageViewer/b257fa9c5ac8c515ac4d77a667ce2943.svg); }
+    background-image: url(/ctmobile-ui/html/ImageViewer/b257fa9c5ac8c515ac4d77a667ce2943.svg); }
   .pswp--svg .pswp__button--arrow--left,
   .pswp--svg .pswp__button--arrow--right {
     background: none; } }
@@ -561,7 +561,7 @@ a.pswp__share--download:hover {
   padding: 0 10px; }
 
 /*
-	
+
 	4. Caption
 
  */
@@ -620,7 +620,7 @@ a.pswp__share--download:hover {
   opacity: 1; }
   .pswp__preloader--active .pswp__preloader__icn {
     /* We use .gif in browsers that don't support CSS animation */
-    background: url(/playerljc.github.io/ctmobile-ui/html/ImageViewer/e34aafbb485a96eaf2a789b2bf3af6fe.gif) 0 0 no-repeat; }
+    background: url(/ctmobile-ui/html/ImageViewer/e34aafbb485a96eaf2a789b2bf3af6fe.gif) 0 0 no-repeat; }
 
 .pswp--css_animation .pswp__preloader--active {
   opacity: 1; }
@@ -642,8 +642,8 @@ a.pswp__share--download:hover {
   margin: 0; }
 
 .pswp--css_animation .pswp__preloader__cut {
-  /* 
-			The idea of animating inner circle is based on Polymer ("material") loading indicator 
+  /*
+			The idea of animating inner circle is based on Polymer ("material") loading indicator
 			 by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html
 		*/
   position: relative;
@@ -713,7 +713,7 @@ a.pswp__share--download:hover {
             transform: rotate(0); } }
 
 /*
-	
+
 	6. Additional styles
 
  */
@@ -785,4 +785,4 @@ a.pswp__share--download:hover {
 
 .pswp--minimal--dark .pswp__top-bar {
   background: none; }
-.ctmobile-ui-demo-button:hover,.ctmobile-ui-demo-done-page-header-backicon:hover{cursor:pointer}.ctmobile-ui-demo-done-container,.ctmobile-ui-demo-done-page,.ctmobile-ui-demo-done-wrappe{width:100%;height:100%}.ctmobile-ui-demo-done-page{position:relative;display:flex;flex-direction:column;padding:0;margin:0;background-color:#fff}.ctmobile-ui-demo-done-page-content,.ctmobile-ui-demo-done-page-header{width:100%}.ctmobile-ui-demo-done-page-header{flex-shrink:0;height:3rem;box-sizing:border-box;display:flex;justify-content:space-between;align-items:center;padding:10px;border-bottom:1px solid rgba(0,0,0,.1)}.ctmobile-ui-demo-done-page-header-backicon{flex-shrink:0;width:2.5rem;height:2.5rem;background:url(/playerljc.github.io/ctmobile-ui/html/ImageViewer/5c23c7c87e720ef390f264952ccb8217.svg) no-repeat;background-size:100% 100%}.ctmobile-ui-demo-done-page-header-title{flex-grow:1;min-width:0;overflow:hidden;font-size:14px;text-overflow:ellipsis;white-space:nowrap;display:flex;align-items:center;justify-content:center}.ctmobile-ui-demo-done-page-content{position:relative;flex-grow:1;min-height:0;overflow:auto}body,html{padding:0;margin:0;width:100%;height:100%}.ctmobile-ui-doc-demo-device{position:relative;box-sizing:border-box;padding:80px 15px;margin:20px;border-radius:55px;box-shadow:0 0 0 5px #aaa;background:#111;z-index:1000}.ctmobile-ui-doc-demo-device>.ctmobile-ui-doc-demo-device-inner{background-color:#fff;padding:.5rem;width:320px;height:548px;overflow:auto}.ctmobile-ui-doc-demo-device>.ctmobile-ui-doc-demo-device-inner>iframe{width:100%;height:100%;border:0}.ctmobile-ui-doc-demo-device:before{content:'';width:60px;height:10px;border-radius:10px;position:absolute;left:50%;margin-left:-30px;background:#333;top:50px}.ctmobile-ui-doc-demo-device:after{content:'';position:absolute;width:50px;height:50px;left:50%;margin-left:-25px;bottom:20px;border-radius:100%;box-sizing:border-box;border:3px solid #333}.ctmobile-ui-demo-button{display:block;width:85%;padding:.5rem;border-radius:.25rem;border:1px solid #0077b3;text-align:center;left:7.5%;box-sizing:border-box;margin:15px auto}.ctmobile-ui-doc{padding:20px}.ctmobile-ui-doc a{text-decoration:none}.ctmobile-ui-doc a:active,.ctmobile-ui-doc a:hover,.ctmobile-ui-doc a:link,.ctmobile-ui-doc a:visited{color:#000}.ctmobile-ui-doc dl dd{margin-left:0}.ctmobile-ui-doc ul{list-style:none;padding:0;margin-left:20px}.ctmobile-ui-doc ul li{position:relative;margin:5px 0;padding-left:10px}.ctmobile-ui-doc ul li:before{content:'';width:2px;height:2px;position:absolute;left:0;top:10px;margin-top:-1px;background:#000;border-radius:50%;opacity:.5}.ctmobile-ui-doc ul li ul{list-style:none;padding:0;margin-left:20px}.ctmobile-ui-doc .with-device{position:relative;overflow:hidden}.ctmobile-ui-doc .with-device>.with-device-code{float:left;width:calc(100% - 400px)}.ctmobile-ui-doc .with-device>.with-device-view{float:left;width:400px}.ctmobile-ui-doc .method-wrap{padding:20px;margin:1em 0;border-left:3px solid #ccc;background:#fafafa}.ctmobile-ui-doc .method-wrap>p{color:#000;font-weight:700;font-size:18px}.ctmobile-ui-doc .method-wrap>p:first-child{margin-top:0}.ctmobile-ui-doc .method-wrap .parameter{color:#b72f20;font-weight:500}.ctmobile-ui-doc .method-wrap .parameterType{color:#006700;font-weight:500}.ctmobile-ui-doc .method-wrap>.method-parameters>li{margin:5px 0}.ctmobile-ui-doc .method-wrap+.method-wrap{margin-top:30px}.ctmobile-ui-doc .events-table{table-layout:fixed;border-collapse:collapse;width:100%}.ctmobile-ui-doc .events-table>thead>tr{border-bottom:1px solid rgba(0,0,0,.1)}.ctmobile-ui-doc .events-table>thead>tr>th{padding:15px 0}.ctmobile-ui-doc .events-table>tbody>tr{font-size:16px;border-bottom:1px solid rgba(0,0,0,.1)}.ctmobile-ui-doc .events-table>tbody>tr td{padding:15px}.ctmobile-ui-doc-demo-device-inner>h3{padding-left:1rem}.photoWrap,.photoWrap>li{margin:0!important;padding:0!important}.photoWrap{list-style:none}.photoWrap>li>img{width:100%}
+.ctmobile-ui-demo-button:hover,.ctmobile-ui-demo-done-page-header-backicon:hover{cursor:pointer}.ctmobile-ui-demo-done-container,.ctmobile-ui-demo-done-page,.ctmobile-ui-demo-done-wrappe{width:100%;height:100%}.ctmobile-ui-demo-done-page{position:relative;display:flex;flex-direction:column;padding:0;margin:0;background-color:#fff}.ctmobile-ui-demo-done-page-content,.ctmobile-ui-demo-done-page-header{width:100%}.ctmobile-ui-demo-done-page-header{flex-shrink:0;height:3rem;box-sizing:border-box;display:flex;justify-content:space-between;align-items:center;padding:10px;border-bottom:1px solid rgba(0,0,0,.1)}.ctmobile-ui-demo-done-page-header-backicon{flex-shrink:0;width:2.5rem;height:2.5rem;background:url(/ctmobile-ui/html/ImageViewer/5c23c7c87e720ef390f264952ccb8217.svg) no-repeat;background-size:100% 100%}.ctmobile-ui-demo-done-page-header-title{flex-grow:1;min-width:0;overflow:hidden;font-size:14px;text-overflow:ellipsis;white-space:nowrap;display:flex;align-items:center;justify-content:center}.ctmobile-ui-demo-done-page-content{position:relative;flex-grow:1;min-height:0;overflow:auto}body,html{padding:0;margin:0;width:100%;height:100%}.ctmobile-ui-doc-demo-device{position:relative;box-sizing:border-box;padding:80px 15px;margin:20px;border-radius:55px;box-shadow:0 0 0 5px #aaa;background:#111;z-index:1000}.ctmobile-ui-doc-demo-device>.ctmobile-ui-doc-demo-device-inner{background-color:#fff;padding:.5rem;width:320px;height:548px;overflow:auto}.ctmobile-ui-doc-demo-device>.ctmobile-ui-doc-demo-device-inner>iframe{width:100%;height:100%;border:0}.ctmobile-ui-doc-demo-device:before{content:'';width:60px;height:10px;border-radius:10px;position:absolute;left:50%;margin-left:-30px;background:#333;top:50px}.ctmobile-ui-doc-demo-device:after{content:'';position:absolute;width:50px;height:50px;left:50%;margin-left:-25px;bottom:20px;border-radius:100%;box-sizing:border-box;border:3px solid #333}.ctmobile-ui-demo-button{display:block;width:85%;padding:.5rem;border-radius:.25rem;border:1px solid #0077b3;text-align:center;left:7.5%;box-sizing:border-box;margin:15px auto}.ctmobile-ui-doc{padding:20px}.ctmobile-ui-doc a{text-decoration:none}.ctmobile-ui-doc a:active,.ctmobile-ui-doc a:hover,.ctmobile-ui-doc a:link,.ctmobile-ui-doc a:visited{color:#000}.ctmobile-ui-doc dl dd{margin-left:0}.ctmobile-ui-doc ul{list-style:none;padding:0;margin-left:20px}.ctmobile-ui-doc ul li{position:relative;margin:5px 0;padding-left:10px}.ctmobile-ui-doc ul li:before{content:'';width:2px;height:2px;position:absolute;left:0;top:10px;margin-top:-1px;background:#000;border-radius:50%;opacity:.5}.ctmobile-ui-doc ul li ul{list-style:none;padding:0;margin-left:20px}.ctmobile-ui-doc .with-device{position:relative;overflow:hidden}.ctmobile-ui-doc .with-device>.with-device-code{float:left;width:calc(100% - 400px)}.ctmobile-ui-doc .with-device>.with-device-view{float:left;width:400px}.ctmobile-ui-doc .method-wrap{padding:20px;margin:1em 0;border-left:3px solid #ccc;background:#fafafa}.ctmobile-ui-doc .method-wrap>p{color:#000;font-weight:700;font-size:18px}.ctmobile-ui-doc .method-wrap>p:first-child{margin-top:0}.ctmobile-ui-doc .method-wrap .parameter{color:#b72f20;font-weight:500}.ctmobile-ui-doc .method-wrap .parameterType{color:#006700;font-weight:500}.ctmobile-ui-doc .method-wrap>.method-parameters>li{margin:5px 0}.ctmobile-ui-doc .method-wrap+.method-wrap{margin-top:30px}.ctmobile-ui-doc .events-table{table-layout:fixed;border-collapse:collapse;width:100%}.ctmobile-ui-doc .events-table>thead>tr{border-bottom:1px solid rgba(0,0,0,.1)}.ctmobile-ui-doc .events-table>thead>tr>th{padding:15px 0}.ctmobile-ui-doc .events-table>tbody>tr{font-size:16px;border-bottom:1px solid rgba(0,0,0,.1)}.ctmobile-ui-doc .events-table>tbody>tr td{padding:15px}.ctmobile-ui-doc-demo-device-inner>h3{padding-left:1rem}.photoWrap,.photoWrap>li{margin:0!important;padding:0!important}.photoWrap{list-style:none}.photoWrap>li>img{width:100%}
